# dset-specs-loops-framework

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  dset.toml  dset_settings.toml  pyproject.toml
.dset/: DSET-CONTROL-HUB.md  README.md  dset_settings.toml
.github/: DELIVERY.md  README.md
00_project/: DSET-SPECIFICATION-001-methodology-projection-set.md  README.md  plan-evaluations.md  plan-tests.md  plan-verification.md  plan-work.md  specification-contracts.md  specification-design.md  specification-outcomes.md
01_layer_meta/: README.md
02_layer_gov/: README.md  plan-tests.md
03_layer_tool/: README.md
04_layer_skill/: README.md
05_layer_ops/: README.md
10_project/: 000_dset-project-hub.md
10_versions/: DSET-VERSION-001-0-3-foundation.md  DSET-VERSION-002-0-4-self-hosted-core.md
11_layer_meta/: 000_dset-meta-hub.md  010_dset-meta-navigation-methodology.md  020_dset-meta-specification-contracts.md  030_dset-meta-specification-domain.md  040_dset-meta-specification-methodology.md  050_dset-meta-specification-outcomes.md  060_dset-meta-specification-user-stories.md  070_dset-meta-procedure-domain-spec-authoring.md  080_dset-meta-procedure-evaluation-planning.md  090_dset-meta-procedure-test-planning.md
12_layer_gov/: 000_dset-gov-hub.md  010_dset-gov-navigation-governance.md  020_dset-gov-navigation-methodology.md  030_dset-gov-specification-architecture.md  040_dset-gov-specification-artifact-classification.md  050_dset-gov-specification-artifact-maintenance.md  060_dset-gov-specification-contracts.md  070_dset-gov-specification-domain.md  (+4 more)
(+2376 files in other folders)
