[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dset-spec-loops"
version = "0.3.1"
description = "Executable contracts for DSET Spec Loops"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Anatoly Maslennikov"}]
dependencies = []

[project.scripts]
dset = "dset_toolchain.cli:main"

[tool.setuptools]
packages = ["dset_toolchain"]

[tool.setuptools.package-data]
dset_toolchain = ["bootstrap_bundle.json"]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "ruff>=0.15.21",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["dset_toolchain", "tests"]
